# Q-Learning

./: README.md
install/: local_setup.sh  setup.sh
install/turtlebot3/share/turtlebot3/: local_setup.sh  package.sh
install/turtlebot3_bringup/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_bringup
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.sh  package.sh
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: package.sh
install/turtlebot3_description/share/turtlebot3_description/: package.sh
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: package.sh
install/turtlebot3_gazebo/include/turtlebot3_gazebo/: qlearning.hpp
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: q_learning  run_demo  turtlebot3_drive
install/turtlebot3_gazebo/share/ament_index/resource_index/package_run_dependencies/: turtlebot3_gazebo
install/turtlebot3_gazebo/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_gazebo
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/demo/: model.config
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/demo/start_box/: model.config
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/wall/: model.sdf
install/turtlebot3_gazebo/share/turtlebot3_gazebo/worlds/demo_world/: burger.model
install/turtlebot3_gazebo/share/turtlebot3_gazebo/worlds/training_world/: burger.model
install/turtlebot3_gazebo/share/turtlebot3_gazebo/worlds/turtlebot3_dqn_stage3/: burger.model
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: package.sh
install/turtlebot3_node/share/turtlebot3_node/: package.sh
install/turtlebot3_simulations/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_simulations
install/turtlebot3_simulations/share/turtlebot3_simulations/: package.sh
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
log/: latest_build
src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
src/turtlebot3_simulations/turtlebot3_gazebo/include/turtlebot3_gazebo/: run_demo.hpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: demo.launch.py  training.launch.py  turtlebot3_maze.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/demo/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/demo/obstacles/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/demo/start_box/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_maze_world/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/wall/obstacles/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/src/: qlearning.cpp  run_demo.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/turtlebot3_maze/: burger.model
